--- a/StewardClient/src/app/pages/tools/pages/user-banning/user-banning.component.html
+++ b/StewardClient/src/app/pages/tools/pages/user-banning/user-banning.component.html
@@ -4,8 +4,9 @@
     [routerLink]="link.route"
     mat-button
     routerLinkActive="mat-stroked-button"
-    >{{ link.name }}
-    <endpoint-selection [titleCodeName]="link.codename"></endpoint-selection>
+    [disabled]="link.disabled"
+    ><span [matTooltip]="link.disabled ? disabledRouteTooltip : null">{{ link.name }}</span>
+    <endpoint-selection *ngIf="!link.disabled" [titleCodeName]="link.codename"></endpoint-selection>
   </a>
   <span class="spacer"></span>
 </mat-toolbar>
