cleanup woodstock, implement in sunrise

--- a/StewardClient/src/app/pages/tools/pages/ugc-details/pages/sunrise-lookup/sunrise-lookup.component.html
+++ b/StewardClient/src/app/pages/tools/pages/ugc-details/pages/sunrise-lookup/sunrise-lookup.component.html
@@ -6,52 +6,62 @@
         <mat-card-subtitle>IDs and other text</mat-card-subtitle>
       </mat-card-header>
       <div class = "sf-wrapper">
-        <model-dump-xuids></model-dump-xuids>
-        <model-dump-simple-table
-          [values]="source.processedModel.extractedStrings.ids"
-        ></model-dump-simple-table>
-        <model-dump-humanize-table
-          [values]="source.processedModel.extractedStrings.other"
-        ></model-dump-humanize-table>
-        <model-dump-humanize-array-table
-          [values]="source.processedModel.extractedStringArrays.all"
-        ></model-dump-humanize-array-table>
-        <model-dump-simple-table
-          [values]="source.processedModel.extractedNumbers.ids"
-        ></model-dump-simple-table>
-        <model-dump-flags></model-dump-flags>
-        <mat-card-actions align="end">
-          <ng-content select="button"></ng-content>
-          <ugc-download-button [item]="ugcItem"></ugc-download-button>
-          <button
-            [disabled]="!canFeatureUgc"
-            mat-raised-button
-            color="primary"
-            (click)="featureUgcItem()"
-          >
-            <span [matTooltip]="featureMatToolip" [matTooltipDisabled]="canFeatureUgc">{{
-              ugcItem?.featuredByT10 ? 'Edit Featured Status' : 'Set Featured Status'
-            }}</span>
-          </button>
-          <button
-            mat-raised-button
-            color="warn"
-            [verifyWith]="verifyHide"
-            (click)="hideUgcItem()"
-            stateManager
-            [monitor]="hideMonitor"
-            monitorDisable
-            monitorWarn
-            monitorWarnSnackbar
-            monitorCompleteSnackbar
-            [disabled]="!canHideUgc"
-          >
-            Hide UGC
-          </button>
-          <mat-checkbox #verifyHide matTooltip="Verify Deletion" aria-label="Verify Deletion"
-            >Verify</mat-checkbox
-          >
-        </mat-card-actions>
+        <div class="sf-horizontal">
+          <div class="sf-vertical">
+            <model-dump-xuids></model-dump-xuids>
+            <model-dump-simple-table
+              [values]="source.processedModel.extractedStrings.ids"
+            ></model-dump-simple-table>
+            <model-dump-humanize-table
+              [values]="source.processedModel.extractedStrings.other"
+            ></model-dump-humanize-table>
+            <model-dump-humanize-array-table
+              [values]="source.processedModel.extractedStringArrays.all"
+            ></model-dump-humanize-array-table>
+            <model-dump-simple-table
+              [values]="source.processedModel.extractedNumbers.ids"
+            ></model-dump-simple-table>
+            <model-dump-flags></model-dump-flags>
+          </div>
+          <div class="sf-vertical">
+            <ng-content select="button"></ng-content>
+            <ugc-download-button
+              class="sf-full-width sf-default-margins sf-action-list-margins"
+              [item]="ugcItem"></ugc-download-button>
+            <button
+              class="sf-default-margins sf-action-list-margins"
+              [disabled]="!canFeatureUgc"
+              mat-raised-button
+              color="primary"
+              (click)="featureUgcItem()"
+            >
+              <span [matTooltip]="featureMatToolip" [matTooltipDisabled]="canFeatureUgc">{{
+                ugcItem?.featuredByT10 ? 'Edit Featured Status' : 'Set Featured Status'
+              }}</span>
+            </button>
+            <div class="sf-horizontal">
+              <button
+                class="sf-action-list-margins sf-grow-to-container"
+                mat-raised-button
+                color="warn"
+                [verifyWith]="verifyHide"
+                (click)="hideUgcItem()"
+                stateManager
+                [monitor]="hideMonitor"
+                monitorDisable
+                monitorWarn
+                monitorWarnSnackbar
+                monitorCompleteSnackbar
+                [disabled]="!canHideUgc"
+              >
+                Hide UGC
+              </button>
+              <mat-checkbox #verifyHide matTooltip="Verify Deletion" aria-label="Verify Deletion"
+                >Verify</mat-checkbox
+              >
+            </div>
+          </div>
+        </div>
       </div>
     </mat-card>
 
