--- a/StewardClient/src/app/pages/tools/pages/user-banning/user-banning.component.html
+++ b/StewardClient/src/app/pages/tools/pages/user-banning/user-banning.component.html
@@ -5,8 +5,8 @@
     mat-button
     routerLinkActive="mat-stroked-button"
     [disabled]="link.disabled"
-    ><span [matTooltip]="link.disabled ? disabledRouteTooltip : null">{{ link.name }}</span>
-    <endpoint-selection *ngIf="!link.disabled" [titleCodeName]="link.codename"></endpoint-selection>
+    ><span [matTooltip]="link?.disabled ? disabledRouteTooltip : null">{{ link.name }}</span>
+    <endpoint-selection *ngIf="!link?.disabled" [titleCodeName]="link.codename"></endpoint-selection>
   </a>
   <span class="spacer"></span>
 </mat-toolbar>
