--- a/StewardClient/src/app/pages/tools/pages/ugc-details/pages/steelhead-lookup/steelhead-lookup.component.html
+++ b/StewardClient/src/app/pages/tools/pages/ugc-details/pages/steelhead-lookup/steelhead-lookup.component.html
@@ -41,7 +41,7 @@
             </button>
             <div class="sf-horizontal">
               <button
-                class="sf-action-list-margins sf-grow-to-container"
+                class="sf-action-list-margins sf-grow-1"
                 mat-raised-button
                 color="warn"
                 [verifyWith]="verifyReport"
