--- a/StewardClient/src/app/pages/tools/pages/ugc-details/pages/woodstock-lookup/woodstock-lookup.component.html
+++ b/StewardClient/src/app/pages/tools/pages/ugc-details/pages/woodstock-lookup/woodstock-lookup.component.html
@@ -54,7 +54,7 @@
             </div>
             <div class="sf-horizontal">
               <button
-                class="sf-action-list-margins sf-grow-to-container"
+                class="sf-action-list-margins sf-grow-1"
                 mat-raised-button
                 color="warn"
                 [verifyWith]="verifyReport"
@@ -78,7 +78,7 @@
 
             <div class="sf-horizontal">
               <button
-                class="sf-action-list-margins sf-grow-to-container"
+                class="sf-action-list-margins sf-grow-1"
                 mat-raised-button
                 color="warn"
                 [verifyWith]="verifyHide"
@@ -93,7 +93,7 @@
               >
                 Hide UGC
               </button>
-              <mat-checkbox #verifyHide matTooltip="Verify Deletion" aria-label="Verify Deletion"
+              <mat-checkbox #verifyHide matTooltip="Verify Deletion" 
                 >Verify</mat-checkbox
               >
             </div>
