--- a/StewardClient/src/styles/global/steward-layout/standard-form.scss
+++ b/StewardClient/src/styles/global/steward-layout/standard-form.scss
@@ -58,7 +58,7 @@
       margin-bottom: $mat-form-field-bottom-spacing;
     }
 
-    .sf-grow-to-container {
+    .sf-grow-1 {
       flex-grow: 1;
     }
 
