--- a/StewardClient/src/app/pages/tools/pages/ugc-details/pages/sunrise-lookup/sunrise-lookup.component.html
+++ b/StewardClient/src/app/pages/tools/pages/ugc-details/pages/sunrise-lookup/sunrise-lookup.component.html
@@ -42,7 +42,7 @@
             </button>
             <div class="sf-horizontal">
               <button
-                class="sf-action-list-margins sf-grow-to-container"
+                class="sf-action-list-margins sf-grow-1"
                 mat-raised-button
                 color="warn"
                 [verifyWith]="verifyHide"
@@ -57,7 +57,7 @@
               >
                 Hide UGC
               </button>
-              <mat-checkbox #verifyHide matTooltip="Verify Deletion" aria-label="Verify Deletion"
+              <mat-checkbox #verifyHide matTooltip="Verify Deletion"
                 >Verify</mat-checkbox
               >
             </div>
