--- a/StewardClient/src/app/pages/tools/pages/ugc-details/pages/woodstock-lookup/woodstock-lookup.component.html
+++ b/StewardClient/src/app/pages/tools/pages/ugc-details/pages/woodstock-lookup/woodstock-lookup.component.html
@@ -93,9 +93,7 @@
               >
                 Hide UGC
               </button>
-              <mat-checkbox #verifyHide matTooltip="Verify Deletion" 
-                >Verify</mat-checkbox
-              >
+              <mat-checkbox #verifyHide matTooltip="Verify Deletion">Verify</mat-checkbox>
             </div>
           </div>
         </div>
