--- a/StewardClient/src/app/pages/tools/pages/user-group-management/components/list-users-in-user-group/list-users-in-user-group.component.html
+++ b/StewardClient/src/app/pages/tools/pages/user-group-management/components/list-users-in-user-group/list-users-in-user-group.component.html
@@ -72,9 +72,7 @@
               <button-spinner [monitor]="addPlayersMonitor" defaultIcon="add"></button-spinner>
             </span>
           </button>
-          <mat-checkbox #verifyBulkAdd matTooltip="Verify Bulk Add"
-            >Verify</mat-checkbox
-          >
+          <mat-checkbox #verifyBulkAdd matTooltip="Verify Bulk Add">Verify</mat-checkbox>
         </div>
         <div class="action">
           <button
@@ -100,11 +98,7 @@
               ></button-spinner>
             </span>
           </button>
-          <mat-checkbox
-            #verifyBulkDelete
-            matTooltip="Verify Bulk Deletion"
-            >Verify</mat-checkbox
-          >
+          <mat-checkbox #verifyBulkDelete matTooltip="Verify Bulk Deletion">Verify</mat-checkbox>
         </div>
       </div>
     </form>
@@ -171,11 +165,7 @@
                     ></button-spinner>
                   </span>
                 </button>
-                <mat-checkbox
-                  #verifyDelete
-                  matTooltip="Verify Deletion"
-                  >Verify</mat-checkbox
-                >
+                <mat-checkbox #verifyDelete matTooltip="Verify Deletion">Verify</mat-checkbox>
               </td>
             </ng-container>
 
