--- a/StewardClient/src/app/pages/tools/pages/ugc-details/pages/sunrise-lookup/sunrise-lookup.component.html
+++ b/StewardClient/src/app/pages/tools/pages/ugc-details/pages/sunrise-lookup/sunrise-lookup.component.html
@@ -57,9 +57,7 @@
               >
                 Hide UGC
               </button>
-              <mat-checkbox #verifyHide matTooltip="Verify Deletion"
-                >Verify</mat-checkbox
-              >
+              <mat-checkbox #verifyHide matTooltip="Verify Deletion">Verify</mat-checkbox>
             </div>
           </div>
         </div>
