--- a/StewardClient/src/app/pages/tools/pages/leaderboards/components/leaderboard-scores/woodstock/woodstock-leaderboard-scores.component.html
+++ b/StewardClient/src/app/pages/tools/pages/leaderboards/components/leaderboard-scores/woodstock/woodstock-leaderboard-scores.component.html
@@ -2,5 +2,6 @@
   [service]="service"
   [leaderboard]="leaderboard"
   [externalSelectedScore]="externalSelectedScore"
+  [gameTitle]="gameTitle"
   (scoresDeleted)="scoresDeleted.emit($event)"
 ></leaderboard-scores>
