--- a/StewardClient/src/app/pages/tools/pages/user-banning/user-banning.component.html
+++ b/StewardClient/src/app/pages/tools/pages/user-banning/user-banning.component.html
@@ -4,7 +4,7 @@
     [routerLink]="link.route"
     mat-button
     routerLinkActive="mat-stroked-button"
-    ><span>{{ link.name }}</span>
+    >{{ link.name }}
     <endpoint-selection [titleCodeName]="link.codename"></endpoint-selection>
   </a>
   <span class="spacer"></span>
