--- a/StewardClient/src/app/pages/tools/pages/leaderboards/components/leaderboard-scores/leaderboard-scores.component.html
+++ b/StewardClient/src/app/pages/tools/pages/leaderboards/components/leaderboard-scores/leaderboard-scores.component.html
@@ -125,6 +125,8 @@
           #verifyCheckboxMultiDelete
           [(ngModel)]="isMultiDeleteActive"
           ngDefaultControl
+          [permissionAttribute]="permAttribute"
+          [permissionTitle]="gameTitle"
           matTooltip="Check to enable deletion"
         >
           Verify Multi-Delete
@@ -247,7 +249,13 @@
                 >
                   Delete
                 </button>
-                <mat-checkbox clickStop #verifyCheckbox matTooltip="Check to enable deletion">
+                <mat-checkbox
+                  [permissionAttribute]="permAttribute"
+                  [permissionTitle]="gameTitle"
+                  clickStop
+                  #verifyCheckbox
+                  matTooltip="Check to enable deletion"
+                >
                   Verify
                 </mat-checkbox>
               </div>
