clean up permissions directives

--- a/StewardClient/src/app/pages/tools/pages/leaderboards/components/leaderboard-scores/leaderboard-scores.component.scss
+++ b/StewardClient/src/app/pages/tools/pages/leaderboards/components/leaderboard-scores/leaderboard-scores.component.scss
@@ -31,7 +31,8 @@ mat-card {
   .multi-select-options {
     margin-left: auto;
 
-    button {
+    button,
+    mat-checkbox {
       width: 100%;
       display: block;
       margin-bottom: $gap-small;
