--- a/StewardClient/src/app/shared/modules/permissions/components/invalid-permissions/invalid-permissions.component.html
+++ b/StewardClient/src/app/shared/modules/permissions/components/invalid-permissions/invalid-permissions.component.html
@@ -1,1 +1,1 @@
-<mat-icon matTooltip="You do not have the permissions to use this feature">gpp_bad</mat-icon>
+<mat-icon [matTooltip]="matTooltip">gpp_bad</mat-icon>
